--- a/pom.xml
+++ b/pom.xml
@@ -5,39 +5,66 @@
   <artifactId>cucumber-jvm</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
-   <dependencies>
+  <properties>
+  		<selenium.version>2.45.0</selenium.version>
+  		<junit.version>4.12</junit.version>
+  		<cucumber.version>1.2.2</cucumber.version>
+  		<cucumber.reporting>0.0.24</cucumber.reporting>
+  		<guava.version>16.0</guava.version>
+  </properties>
+  
+  <dependencies>
+  		<!-- Selenium WebDriver Dependencies -->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>2.44.0</version>
+            <version>${selenium.version}</version>
         </dependency>
+        <dependency>
+        	<groupId>org.seleniumhq.selenium</groupId>
+        	<artifactId>selenium-server</artifactId>
+        	<version>${selenium.version}</version>
+    	</dependency>  
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-firefox-driver</artifactId>
-            <version>2.44.0</version>
+            <version>${selenium.version}</version>
         </dependency>
+        
+        <!-- JUnit Dependency -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
+            <version>${junit.version}</version>
         </dependency>
+        
+        <!-- Cucumber-JVM Dependencies -->
         <dependency>
             <groupId>info.cukes</groupId>
             <artifactId>cucumber-junit</artifactId>
-            <version>1.1.5</version>
+            <version>${cucumber.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>info.cukes</groupId>
             <artifactId>cucumber-java</artifactId>
-            <version>1.1.5</version>
+            <version>${cucumber.version}</version>
             <scope>test</scope>
         </dependency>
+        
+        <!-- Cucumber Reporting Dependency -->
         <dependency>
-            <groupId>info.cukes</groupId>
-            <artifactId>cucumber-picocontainer</artifactId>
-            <version>1.1.5</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+    		<groupId>net.masterthought</groupId>
+    		<artifactId>cucumber-reporting</artifactId>
+    		<version>${cucumber.reporting}</version>
+	    </dependency>
+	    
+	    <!-- Guava Dependency -->
+	    <dependency>
+ 			<groupId>com.google.guava</groupId> 
+ 			<artifactId>guava</artifactId> 
+ 			<version>${guava.version}</version> 
+ 			<scope>test</scope> 
+		</dependency>
+  </dependencies>
 </project>
